# 3SAToracle

./: .gitignore  CMakeLists.txt  LICENSE  README.md  pytest.ini  setup.sh
doc/: API.md
lib/: CMakeLists.txt
lib/include/: sat_solver.h
lib/src/: python_bindings.cpp  sat_solver.cpp
src/: __init__.py  cnf_to_mct_json.py  quantum_circuit.py  quantum_circuit.schema.json
test/: test_equivalence.py  test_quantum_circuit.py  test_sat_solver.py  test_schema.py
